--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -46,8 +46,8 @@
 }
 
 .custom-search-input {
-    height: 110px;
-    width: 900px;
+    height: 80px;
+    width: 800px;
     background: linear-gradient(89.17deg, #003DCA 2.97%, #3738FF 95.78%);
     color: white;
     border: none;
@@ -68,4 +68,15 @@
 
 .next-img-div {
     background: #3030C2;
+}
+
+.chart-card {
+    width: 100%;
+    height: 330px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    background-color: #ffff;
+}
+
+.bar-cards {
+    height: 400px;
 }
