--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -12,7 +12,7 @@
     width: 170px;
     height: 120px;
     border: none;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     cursor: pointer;
     padding: 15px;
 }
@@ -45,9 +45,13 @@
     height: 55%;
 }
 
+.next-icon {
+    border-radius: 50%;
+}
+
 .custom-search-input {
     height: 80px;
-    width: 800px;
+    width: 900px;
     background: linear-gradient(89.17deg, #003DCA 2.97%, #3738FF 95.78%);
     color: white;
     border: none;
@@ -73,10 +77,16 @@
 .chart-card {
     width: 100%;
     height: 330px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #ffff;
 }
 
 .bar-cards {
     height: 400px;
+}
+
+.grid-card {
+    width: 270px;
+    height: 140px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
