--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,5 +1,7 @@
 .dashboard {
     background: #f1f1f1;
+    width: 100%;
+    height: 100%;
 }
 
 .dashboard .right-arrow {
@@ -51,7 +53,7 @@
 
 .custom-search-input {
     height: 80px;
-    width: 1000px;
+    width: 700px;
     background: linear-gradient(89.17deg, #003DCA 2.97%, #3738FF 95.78%);
     color: white !important;
     border: none;
@@ -101,7 +103,7 @@
 
 .chart-card {
     width: 100%;
-    height: 433px;
+    height: 430px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #ffff;
     margin-bottom: 10px;
@@ -121,12 +123,12 @@
 }
 
 .grid-card {
-    width: 280px;
+    width: 220px;
     height: 150px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
     .mask-img {
         width: 25%;
         height: 25%;
@@ -154,18 +156,16 @@
     }
 
     .custom-search-input::placeholder {
-        font-size: 13px
+        font-size: 13px;
     }
 
     .next-img-div {
         top: 50%;
         right: 10px;
     }
-
-
 }
 
-@media (min-width:485px) and (max-width: 900px) {
+@media (min-width: 481px) and (max-width: 900px) {
     .custom-search-input {
         height: 80px;
         width: 600px;
@@ -181,6 +181,18 @@
         width: 65%;
         height: 65%;
     }
+
+    .grid-card {
+        width: 180px;
+        height: 120px;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
 }
 
-@media screen and (max-width: 1200px) {}
+@media (min-width: 901px) and (max-width: 1200px) {
+    .grid-card {
+        width: 180px;
+        height: 120px;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
+}
