--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     font-family: sans-serif;
     background: #999999;
     font-family: "Poppins", sans-serif;
+    /* overflow-x: hidden; */
 }
 
 .heading {
