--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -47,8 +47,8 @@
 }
 
 .mask-img {
-    width: 60%;
-    height: 60%;
+    width: 70%;
+    height: 70%;
 }
 
 .next-icon {
@@ -57,7 +57,7 @@
 
 .custom-search-input {
     height: 80px;
-    width: 700px;
+    width: 800px;
     background: linear-gradient(89.17deg, #003DCA 2.97%, #3738FF 95.78%);
     color: white !important;
     border: none;
@@ -127,7 +127,7 @@
 }
 
 .grid-card {
-    width: 220px;
+    width: 230px;
     height: 135px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
@@ -205,4 +205,17 @@
         height: 120px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
+}
+
+@media (min-width:1200px) and (max-width:1400px) {
+    .dashboard {
+        width: 100%;
+        height: 100%;
+        background-color: blue;
+        /* overflow-x: hidden; */
+    }
+
+
+
+
 }
